# ArticleIntroductionGenerator

./: .gitignore  README.md
.github/workflows/: ci-cd.yml
doc/: CONFIGURE.md  INSTALL.md  JSON-FORMAT.md  LLM.md  README.md  TESTING.md  UPLOAD.md
src/: README.md  program_launcher.py  pyproject.toml  toml_gen.py
src/article_introduction_generator/: about.py  desktop.py  program.py  program_old.py
src/article_introduction_generator/modules/: consult.py
